--- a/short-response/q1.md
+++ b/short-response/q1.md
@@ -6,4 +6,5 @@ When should Context be used?
 Context should be used when you want to avoid prop drilling. It is a object that provides all of its descendants with access to the Context object's values.
 # Feedback
 
-X/3 points
+3/3 points
+Great job on this answer
