--- a/short-response/q2.md
+++ b/short-response/q2.md
@@ -13,5 +13,7 @@ implement the useContext hook to get access to the contextValues within a descen
 
 
 # Feedback
+2/3 points
+Great job on the first two steps but you're missing the last step. 
 
-X/3 points
+Getting values from a Context - useContext(Context)
